--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kunjungi Channel YouTube Kami</title>
+    <title>Kunjungi Sosial Media Kami</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -32,14 +32,14 @@
 <body>
     <h1>Kunjungi Channel YouTube Kami</h1>
     <img src="foto1.jpg" alt="Foto 1" class="foto">
-    <a href="https://www.youtube.com/@safaaudioofficial51" target="_blank" class="tombol">Kunjungi Channel</a>
+    <a href="https://www.youtube.com/@safaaudioofficial51" target="_blank" class="tombol">Kunjungi </a>
   <h1>Kunjungi Juga Tiktok Kami</h1>
     <img src="foto2.jpg" alt="Foto 2" class="foto">
     <img src="foto3.jpg" alt="Foto 3" class="foto">
-    <a href="tiktok.com/@dablezx" target="_blank" class="tombol">Kunjungi Channel</a>
-    <a href="tiktok.com/@jarott2463" target="_blank" class="tombol">Kunjungi Channel</a>
+    <a href="tiktok.com/@dablezx" target="_blank" class="tombol">Kunjungi </a>
+    <a href="tiktok.com/@jarott2463" target="_blank" class="tombol">Kunjungi </a>
   <h1>WhatsApp Kami</h1>
     <img src="foto4.jpg" alt="Foto 4" class="foto">
-    <a href="https://wa.me/message/FMZFHPG3GST7I1" target="_blank" class="tombol">Kunjungi Channel</a>
+    <a href="https://wa.me/message/FMZFHPG3GST7I1" target="_blank" class="tombol">Kunjungi </a>
 </body
 </html>
